# vibe-coding-folder-template

./: .gitignore  LICENSE  README.md  agents.md  pyproject.toml
